--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.ts",
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
-    "start": "node dist/server.js",
+    "start": "ts-node src/server.ts",
     "build": "tsc"
   },
   "engines": {
