--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "back-cadastro",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.ts",
+  "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
     "start": "node dist/server.js",
