--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.1",
     "firebase": "^9.9.3",
     "firebase-admin": "^11.0.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
