22/08/2022 criado o sistema de validação de login

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
   "cSpell.words": [
     "certificacao",
     "firestore",
+    "funcoes",
     "Ilogin",
+    "usuario",
     "usuarios",
     "validacao"
   ]
