--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,13 @@
 {
   "cSpell.words": [
     "certificacao",
+    "endregion",
     "firestore",
+    "fonernecedor",
     "funcoes",
     "Ilogin",
+    "logar",
+    "perecivel",
     "usuario",
     "usuarios",
     "validacao"
