--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
+    "teste": "vitest",
     "start": "node dist/server.js",
     "build": "tsc"
   },
@@ -29,6 +30,7 @@
     "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.19",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vitest": "^0.23.1"
   }
 }
