--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/server.js",
+  "engines" :{
+    "node" : "18"
+  },
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
     "teste": "vitest",
